@@ -1,3 +1,14 @@
+Thu Jan 17 12:23:42 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Sig_Handler.cpp:
+          Layout changes
+
+        * docs/bczar/bczar.html:
+          Updated packages
+
+        * html/Stats/index.shtml:
+          Added another page
+
 Fri Jan  4 21:52:14 UTC 2013  Adam Mitz  <mitza@ociweb.com>
 
         * include/makeinclude/platform_linux_clang.GNU:
